Update sidebar styling and fix ui on tablets

--- a/src/features/common/styles/styles.scss
+++ b/src/features/common/styles/styles.scss
@@ -39,6 +39,7 @@ body {
 .copy-button:hover {
   border-radius: 50%;
   cursor: pointer;
+  background: #f4f4f4;
 }
 
 .header {
@@ -123,7 +124,7 @@ body {
   }
 }
 
-@media only screen and (max-width: 865px) {
+@media only screen and (max-width: 975px) {
   .header {
     margin-top: 20px !important;
   }
@@ -223,7 +224,7 @@ a {
 }
 
 a:hover {
-  color: #0d6efd !important;
+  color: #007ad9 !important;
 }
 
 .follow-button {
